esercizio da rifare

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="./snack-4/js/myscript.js"></script>
+    <script src="./snack-8/js/script-2.js"></script>
 </body>
 
 </html>
